welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:11: error: reassignment to val
    a = a%10;
      ^